--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cowboy Kyle LLC</title>
+    <title>Cowboy Kyle, LLC</title>
+    <meta name="description" content="Cowboy Kyle - a real estate company">
+    <meta property="og:title" content="Cowboy Kyle, LLC">
+    <meta property="og:description" content="Cowboy Kyle - a real estate company">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Cowboy Kyle, LLC">
+    <meta name="twitter:description" content="Cowboy Kyle - a real estate company">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -25,7 +32,8 @@
     </div>
     
     <footer>
-        <p>&copy; <span id="current-year"></span> Cowboy Kyle LLC</p>
+        <p>&copy; <span id="current-year"></span> Cowboy Kyle, LLC</p>
+        <p>Lakeside, Montana</p>
     </footer>
     
     <script>
